An attempt to fix stuff for the JDK tests.